# Krypton

./: CMakeLists.txt  CODE_STYLE_GUIDE.md  README.md
Examples/: DyanmicTypingWithVar.kr  FunctionExample.kr  Hello.kr  MinimalCrash.kr  NativeFuncs.kr  TuringMachine.kr
Installer/: KryptonInterpreter.msi  KryptonInterpreter.wixpdb  KryptonInterpreter.wxs  license.rtf
Interpreter/: CMakeLists.txt
Interpreter/include/cli/: Argument.h  ArgumentHandler.h  ArgumentParser.h  CommandExecutor.h
Interpreter/include/common/: Constants.h  Error.h  ErrorHandler.h  FileHelper.h  Logger.h  PrettyPrinter.h  SourceLocation.h  StringHelper.h
Interpreter/include/lexer/: Lexer.h  Token.h
Interpreter/include/nodes/: ASTNode.h  Expressions.h  FunctionNodes.h  Statements.h
Interpreter/include/parser/: Parser.h
Interpreter/include/runtime/: Environment.h  KryptonRuntime.h  KryptonSTD.cpp  KryptonSTD.h  Runtime.h
Interpreter/include/types/: FunctionSignature.h  Operations.h  Primitive.h  Type.h  Value.h
Interpreter/src/: Interpreter.cpp
Interpreter/src/cli/: ArgumentHandler.cpp  ArgumentParser.cpp  CommandExecutor.cpp
Interpreter/src/common/: ErrorHandler.cpp  FileHelper.cpp  Logger.cpp  PrettyPrinter.cpp  StringHelper.cpp
Interpreter/src/core/: Interpreter.cpp  main.cpp
Interpreter/src/lexer/: Lexer.cpp  Token.cpp
Interpreter/src/parser/: Parser.cpp
Interpreter/src/runtime/: Environment.cpp  KryptonRuntime.cpp
Interpreter/src/types/: BoolType.cpp  CharType.cpp  DecType.cpp  FuncType.cpp  IntType.cpp  StrType.cpp  Type.cpp  Value.cpp  VarType.cpp
Interpreter/tests/: ArgumentHandlerTest.cpp  ArgumentParserTest.cpp  FileHelperTest.cpp  LexerTest.cpp  LoggerTest.cpp  ParserTest.cpp  StringHelperTest.cpp  test.cpp
PackageManager/: CMakeLists.txt
StandardLibrary/: CMakeLists.txt
